--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HELLO!</h1>
+    <h1>This is an update</h1>
     <script src="app.js"></script>
 </body>
 </html>
